--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8" />
     <title>Dog World</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .a{
+            background-color:skyblue;
+        }
+        .b{
+            background-color:gold;
+        }
+        .c{
+         background:silver;   
+        }
+        .d{
+            background-color:green;
+        }
+    </style>
 </head>
 <body>
 <header>
@@ -11,10 +25,10 @@
 <h1>Dog World</h1>
 </header>
 <nav>
-    <button onclick=window.location.href="about.html">About</button><br>
-    <button onclick=window.location.href="health">Health</button><br>
-    <button onclick=window.location.href="breed">Breed</button><br>
-    <button onclick=window.location.href="training">Training</button><br>
+    <button onclick=window.location.href="about.html" class="a">About</button><br>
+    <button onclick=window.location.href="health" class="b">Health</button><br>
+    <button onclick=window.location.href="breed" class="c">Breed</button><br>
+    <button onclick=window.location.href="training" class="d">Training</button><br>
 </nav>
 <section>
     <div class="slideshow-container">
